# gamedev-examples

./: .clang-tidy  CMakeLists.txt  README.md  deps.nix  flake.nix  justfile  mingw-w64-toolchain.cmake
common/include/: clay_raylib.hpp  components.hpp  constants.hpp
common/src/: clay_raylib.cpp  components.cpp
examples/: client.cpp  flecs-raylib-scene-manager-clay.cpp  flecs-raylib-scene-manager.cpp  flecs-raylib.cpp  flecs-scene-manager.cpp  server.cpp
